<resources>
    <string name="app_name">Feuille de route - sport électronique</string>
    <string name="labelNom">Nom :</string>
    <string name="labelÉquipe">Équipe :</string>
    <string name="labelActivité">Activité Pratiquée :</string>
    <string name="labelDate">"Date : "</string>
    <string name="labelObjectifPerso">Objectif Personnel :</string>
    <string name="labelDurée">Durée :</string>
    <string name="labelIntensité">Intensité :</string>
    <string name="inputDateText">Click ici pour la date!</string>
    <string name="inputDuréeText">Click ici pour le temps!</string>
    <string name="semaineAfficher">Semaine à afficher :</string>
    <string name="textNotePerso">Note personnelle :</string>
    <string name="databaseError">Fait un export avant de voir les entrainements</string>
<<<<<<< Updated upstream
=======
    <string name="choix_photo">Choisir une photo...</string>
    <string name="sauvegarder">Sauvegarder</string>
    <string name="voir_les_entrainements">Voir les entrainements</string>
    <string name="exporter_tous_les_entrainements_enregistr_es">Exporter tous les entrainements enregistrées</string>
    <string name="afficher">Affiche</string>
    <string name="retour">Retour</string>
    <string name="donnéSauvegarder">Données sont sauvegarder</string>
>>>>>>> Stashed changes
    <string-array name="choixIntensité">
        <item>Faible</item>
        <item>Moyen</item>
        <item>Élevé</item>
    </string-array>

</resources>