<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="-3dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNomEquipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="-22dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="250dp"
        android:text="@string/labelNom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="250dp"
        android:text="@string/labelÉquipe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="5dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNomEquipe"
        tools:ignore="SpeakableTextPresentCheck">

        <HorizontalScrollView
            android:id="@+id/horizontalView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="30dp"
            android:paddingBottom="150dp"
            android:scrollbars="horizontal|vertical"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:id="@+id/tableLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayoutActivitéPhysique"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp">

                    <TextView
                        android:id="@+id/textActivitéPhysique"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:paddingHorizontal="10px"
                        android:text="@string/labelActivité" />

                    <EditText
                        android:id="@+id/editTextActivitéPhysique"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:imeOptions="actionDone"
                        android:inputType="textPersonName"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp">

                    <TextView
                        android:id="@+id/textDate"
                        android:layout_width="98dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="30dp"
                        android:layout_marginBottom="30dp"
                        android:paddingHorizontal="10px"
                        android:text="@string/labelDate" />

                    <EditText
                        android:id="@+id/editTextDate"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:focusableInTouchMode="false"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        android:text="@string/inputDateText" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutObjectifPersonnel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp">

                    <TextView
                        android:id="@+id/textObjectifPersonnel"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:paddingHorizontal="10px"
                        android:text="@string/labelObjectifPerso" />

                    <EditText
                        android:id="@+id/editTextObjectifPersonnel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:imeOptions="actionDone"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        android:text="" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutDurée"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp">

                    <TextView
                        android:id="@+id/textDurée"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:paddingHorizontal="10px"
                        android:text="@string/labelDurée" />

                    <EditText
                        android:id="@+id/editTextDurée"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:focusableInTouchMode="false"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        android:text="@string/inputDuréeText" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutChoixIntensity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:id="@+id/textIntensité"
                        android:layout_width="122dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:paddingHorizontal="10px"
                        android:text="@string/labelIntensité" />

                    <Spinner
                        android:id="@+id/choixIntensité"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="0dp"
                        tools:ignore="SpeakableTextPresentCheck" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/VoirEntrainementLinearLayoutNotePerso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/voirEntrainementTextNotePerso"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/textNotePerso" />

                    <EditText
                        android:id="@+id/voirEntrainementNotePerso"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:background="@drawable/edittextborders"
                        android:ems="10"
                        android:gravity="start|top"
                        android:inputType="textMultiLine"
                        android:minLines="3" />

                    <ImageView
                        android:id="@+id/imgPhoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/btnPhoto"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:text="@string/choix_photo" />

                    <Button
                        android:id="@+id/sauvegardeExercice"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:text="@string/sauvegarder" />

                    <Button
                        android:id="@+id/voirEntrainement2"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:text="@string/voir_les_entrainements" />

                    <Button
                        android:id="@+id/exportAll"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/exporter_tous_les_entrainements_enregistr_es" />

                </LinearLayout>

            </LinearLayout>
        </HorizontalScrollView>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>