<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/voirEntrainement2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".voirEntrainement">


    <Spinner
        android:id="@+id/choixSemaine"
        android:layout_width="80dp"
        android:layout_height="27dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/textSemaineAfficher"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textSemaineAfficher"
        android:layout_width="186dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:text="@string/semaineAfficher"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="405dp"
        android:layout_height="405dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="5dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voirEntrainementEquipe"
        tools:ignore="SpeakableTextPresentCheck">

        <HorizontalScrollView
            android:id="@+id/horizontalView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="30dp"
            android:scrollbars="horizontal|vertical"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:id="@+id/tableLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayoutActivitéPhysique"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp">

                    <TextView
                        android:id="@+id/textActivitéPhysique"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:paddingHorizontal="10px"
                        android:text="@string/labelActivité" />

                    <EditText
                        android:id="@+id/voirEntrainementActivite"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:enabled="false"
                        android:imeOptions="actionDone"
                        android:inputType="textPersonName"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutDate"
                    android:layout_width="392dp"
                    android:layout_height="63dp"
                    android:layout_marginBottom="30dp">

                    <TextView
                        android:id="@+id/textDate"
                        android:layout_width="98dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="30dp"
                        android:layout_marginBottom="30dp"
                        android:paddingHorizontal="10px"
                        android:text="Date : " />

                    <EditText
                        android:id="@+id/voirEntrainementDate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:enabled="false"
                        android:focusableInTouchMode="false"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutObjectifPersonnel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="30dp">

                    <TextView
                        android:id="@+id/textObjectifPersonnel"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:paddingHorizontal="10px"
                        android:text="Objectif Personnel :" />

                    <EditText
                        android:id="@+id/voirEntrainementPersonnel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:enabled="false"
                        android:imeOptions="actionDone"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        android:text="" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutDurée"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="30dp">

                    <TextView
                        android:id="@+id/textDurée"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:paddingHorizontal="10px"
                        android:text="@string/labelDurée" />

                    <EditText
                        android:id="@+id/voirEntrainementTemps"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:enabled="false"
                        android:focusableInTouchMode="false"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:id="@+id/textIntensité"
                        android:layout_width="122dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:paddingHorizontal="10px"
                        android:text="@string/labelIntensité" />

                    <EditText
                        android:id="@+id/voirEntrainementIntensite"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:enabled="false"
                        android:imeOptions="actionDone"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        android:text="" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/VoirEntrainementLinearLayoutNotePerso"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/voirEntrainementTextNotePerso"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/textNotePerso" />

                    <EditText
                        android:id="@+id/voirEntrainementNotePerso"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:background="@drawable/edittextborders"
                        android:ems="10"
                        android:enabled="false"
                        android:focusableInTouchMode="false"
                        android:gravity="start|top"
                        android:inputType="textMultiLine"
                        android:minLines="3" />

                    <ImageView
                        android:id="@+id/imgPhoto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>
        </HorizontalScrollView>
    </ScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:text="@string/labelNom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119" />

    <EditText
        android:id="@+id/voirEntrainementEquipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-22dp"
        android:ems="10"
        android:enabled="false"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:text="@string/labelÉquipe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.21" />

    <EditText
        android:id="@+id/voirEntrainementNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:enabled="false"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textSemaineAfficher" />

    <Button
        android:id="@+id/btnRetour"
        android:layout_width="188dp"
        android:layout_height="37dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="23dp"
        android:text="Retour"
        app:layout_constraintEnd_toStartOf="@+id/btnAfficher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <Button
        android:id="@+id/btnAfficher"
        android:layout_width="196dp"
        android:layout_height="37dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="32dp"
        android:text="Afficher"
        app:layout_constraintStart_toEndOf="@+id/btnRetour"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

</androidx.constraintlayout.widget.ConstraintLayout>